--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,61 @@
-node_modules
+# Node modules (for Node.js projects)
+node_modules/
+
+# Dependency directories
+vendor/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+/dist
+/build
+/out
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Temporary files
+*.swp
+*.swo
+*~
+
+# IDE files
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+
+# Environment files (be careful — these can contain secrets)
+.env
+.env.local
+.env.*.local
+
+# Python (if relevant)
+__pycache__/
+*.pyc
+
+# Mac Finder files
+.AppleDouble
+.LSOverride
+
+# Windows thumbnail cache
+ehthumbs.db
+Desktop.ini
+
+# Compiled source #
+*.com
+*.class
+*.jar
+*.war
+*.pyc
+*.pyo
+*.pyd
