--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "22.15.14",
+    "@types/react": "19.1.3",
+    "typescript": "latest"
   }
 }
