--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest",
-    "tailwind": "^4.0.0"
+    "react-dom": "latest"
   },
   "devDependencies": {
     "@types/node": "22.15.14",
     "@types/react": "19.1.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "typescript": "latest"
   }
 }
